--- a/src/pages/Swap/styles.styl
+++ b/src/pages/Swap/styles.styl
@@ -290,3 +290,25 @@
   }
   
 }
+.swap_button{
+  color: white !important;
+  background: rgb(255, 114, 110) !important;
+  margin: 1em 0px 0px  !important;
+  border-radius: 4px !important;
+  padding: 11px 42px !important;
+  font-size: 16px !important;
+  font-weight: 600 !important;
+  height: 46px;
+  &.dark{
+    &:disabled{
+      color: #d9d9d9 !important;
+      background: rgb(29 29 29) !important;
+    } 
+  }
+  &.light{
+    &:disabled{
+      color: rgb(95, 95, 107) !important;
+      background: rgb(222, 222, 222) !important;
+    } 
+  }
+}
